Switched to binary and updated topics

--- a/deployments/function.defaults.conf
+++ b/deployments/function.defaults.conf
@@ -8,7 +8,7 @@ conf {
   dependencies = []
   accessSysFs = false
   memorySizeInKb = 32768
-  greengrassContainer = true
+  greengrassContainer = false
   uid = 1000
   gid = 1000
   environmentVariables = {
