--- a/functions/CDDMoshJava/function.conf
+++ b/functions/CDDMoshJava/function.conf
@@ -1,8 +1,9 @@
 conf {
   language = "Java"
   functionName = "CDDMoshJava"
-  handlerName = "com.amazonaws.greengrass.cddmosh.App::handleRequest"
+  handlerName = "com.amazonaws.greengrass.cddmosh.App::"${conf.javaBinaryHandler}
   aliasName = "PROD"
+  encodingType = Binary
   greengrassContainer = false
   uid = 1000
   gid = 1000
